task: overflow fixes

--- a/src/shell/components/FieldTypeInternalLink/FieldTypeInternalLink.less
+++ b/src/shell/components/FieldTypeInternalLink/FieldTypeInternalLink.less
@@ -1,5 +1,7 @@
-@import "../typography.less";
-
 .FieldTypeInternalLink {
-  display: flex;
+  span {
+    span {
+      width: 100px;
+    }
+  }
 }
