--- a/src/shell/components/FieldTypeUUID/FieldTypeUUID.less
+++ b/src/shell/components/FieldTypeUUID/FieldTypeUUID.less
@@ -4,6 +4,7 @@
 .FieldTypeUUID {
   display: flex;
   flex-direction: column;
+  width: 100%;
 
   .DateFieldTypeInput {
     display: flex;
@@ -38,6 +39,7 @@
       flex: 1;
       border: 1px solid #f2f4f7;
       border-radius: 0px 8px 8px 0px;
+      width: 100%;
     }
   }
 }
